--- a/.github/workflows/Deploy_surge.yml
+++ b/.github/workflows/Deploy_surge.yml
@@ -37,6 +37,8 @@ jobs:
           
           
       - name: Build Folder
-        run : npm run build
+        run : yarn build
+      - name: Install Surge
+        run: npm install --global surge
       - name: Deploy to Surge
         run : surge ./build http://my_demo_app22.surge.sh/ --token ${{secrets.Token_Surge}}
